Add 'FakeClasse'